<resources>
    <string name="app_name">Demo</string>

    <!-- main menu -->
    <string name="main_menu0_text">首页</string>
    <string name="main_menu1_text">排行</string>
    <string name="main_menu2_text">发现</string>
    <string name="main_menu3_text">我</string>


    <string name="subscribe">订阅</string>
    <string name="default_num">--</string>
    <string name="following">关注</string>
    <string name="fans">粉丝</string>
    <string name="like">关心</string>


    <string name="gif_subscription_content">我知道了</string>
    <string name="gif_subscription_title">长按频道可以更改排序</string>

    <string name="tips">提示</string>
    <string name="setting">设置</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="install">安装</string>
    <string name="reject">狠心拒绝</string>
    <string name="bye">土豪勿扰</string>
    <string name="change">现在切换</string>
    <string name="rate">去评价</string>
    <string name="tip_offline">当前没有网络，无法浏览新闻，是否开启网络？</string>
    <string name="tip_mobile">您已切换到移动网络, 建议切换到省流量模式(不下载图片)? </string>
    <string name="tip_rate">感谢您的使用! 如果喜欢我们, 请给我们五星评价。</string>

    <string name="install_ok">Berkin 安装成功！</string>

    <string name="switch_save_flow">已切换到省流量模式</string>
    <string name="switch_normal">已切换到高清模式</string>
    <!--当前是WIFI网络，不消耗流量，已自动切换到Standar Mode-->
    <string name="switch_wifi">当前是WIFI网络，不消耗流量。自动切换到高清模式 </string>

    <string name="install_tips">喜欢吗？直接安装吧！ </string>

    <string name="error_delete">新闻已删除</string>
    <string name="page_save_mode">转至省流量模式</string>
    <string name="page_best_mode">转高清模式</string>

    <string name="toast_press_again_to_exit">再次点击退出</string>

    <string name="media_network_error">网络不太给力哦</string>
    <string name="mine_item_activity">活 动</string>
    <string name="mine_item_appstore">应用</string>
    <string name="mine_item_day_mode">日间</string>
    <string name="mine_item_favorite">收藏</string>
    <string name="mine_item_feedback">反 馈</string>
    <string name="mine_item_forum">话题</string>
    <string name="mine_item_friend_update">好友动态</string>
    <string name="mine_item_game">游 戏</string>
    <string name="mine_item_message">消息</string>
    <string name="mine_item_night_mode">夜间</string>
    <string name="mine_item_notification">通 知</string>
    <string name="mine_item_offline">离 线</string>
    <string name="mine_item_special_efficacy">特 效</string>
    <string name="mine_item_offline_cancel">取消离线</string>
    <string name="mine_item_sell">商 城</string>
    <string name="mine_item_sell_introduce">特卖、头彩、电影</string>
    <string name="mine_item_settings">设置</string>
    <string name="mine_item_tag_new">NEW</string>
    <string name="mine_login_now">立即登录</string>
    <string name="mine_more_login">更多登录方式</string>
    <string name="mine_no_login_tip">登录后，将推荐给你更多感兴趣的文章</string>
    <string name="mine_register">快速注册</string>
    <string name="minutes_ago">%d分钟前</string>

    <string name="setting_clean">清理缓存</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_event_host">事件发送主机:</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_load_image">非Wifi网络流量</string>
    <string name="setting_load_image_custom">非WLAN网络流量</string>
    <string name="setting_mini_video">小窗播放视频</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_permanent_notify">滚动资讯通知</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_refresh_button_show">列表页显示刷新按钮</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_splash_ad">头条封面</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_transform">自动优化阅读</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="setting_use_info_structure">使用新信息架构</string>
    <string name="setting_use_ugc_style">使用 ugc 样式</string>
    <string name="setting_version_fmt">当前版本%1$s</string>
    <string name="setting_video_auto_play_mode">自动播放视频</string>

    <string name="app_copyright">© 头条网 toutiao.com</string>
    <string name="user_agreement">今日头条用户协议</string>
    <string name="ok">确定</string>
    <string name="event_host_hint">127.0.0.1:10304</string>


    <string name="musicCacheCeilTitle">自定义缓存</string>
    <string name="musicCacheCeil">设置音乐缓存上限</string>
    <string name="clearCacheTitle">清除缓存</string>
    <string name="clearMusicCache">清除音乐缓存</string>
    <string name="clearMusicCachePrompt">超过上限部分自动清除</string>
    <string name="clearImageAndLrcCache">清除图片与歌词缓存</string>
    <string name="other">其他</string>
    <string name="autoClearCachePrompt">退出应用后，自动清除所有缓存</string>
    <string name="autoClearCache">自动清除缓存</string>


    <string name="toast_btn_1">默认的Toast显示</string>
    <string name="toast_btn_2">自定义位置的Toast显示</string>
    <string name="toast_btn_3">带图片的Toast显示</string>
    <string name="toast_btn_4">完全自定义的Toast显示</string>
    <string name="toast_btn_5">长时间的Toast显示</string>
    <string name="toast_text_1">自定义Toast</string>
    <string name="toast_text_2">这是自定义Toast,左边的是一幅很美的图片.</string>
</resources>
